# test-cgal

./: CMakeLists.txt  README.md  build.sh  main.cpp
scripts/: build.sh
